# AntGame

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml  cmake.yml
AntGame/: AntGame.workspace  Makefile
AntGame/AntGame/: AntGame.mk  AntGame.project  Fauna.cpp  WorldObject.cpp  WorldTree.cpp  bar.cpp  bar.h  compile_flags.txt  foo.cpp  main.cpp
AntGame/AntGame/inc/: WorldObject.h  WorldTree.h
cli-app/: CMakeLists.txt  main.cpp  main.cpp.orig
include/antgame/: Agent.h  Ant.h  Fauna.h  Food.h  FoodSource.h  HeritableTrait.h  Plant.h  Visitee.h  Visitor.h  World.h  WorldObject.h  WorldTree.h
scripts/: install.sh
sdl-app/: AntGameRenderer.cpp  AntGameRenderer.h  CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Keybindings.h  MessagePassing.h  Text.cpp  Text.h  TextRenderer.cpp  TextRenderer.h  TreeRenderer.cpp  TreeRenderer.h  WorldObjectRenderer.cpp  WorldObjectRenderer.h  main.cpp
src/: Agent.cpp  Ant.cpp  CMakeLists.txt  Fauna.cpp  Food.cpp  FoodSource.cpp  HeritableTrait.cpp  World.cpp  WorldObject.cpp  WorldTree.cpp
tests/: CMakeLists.txt  test_WorldObject.cpp  test_WorldTree.cpp
